--- a/index.html
+++ b/index.html
@@ -11,133 +11,173 @@
   <body>
     <header>
       <div class="img_header">
-        <img src="https://aquazoom.ru/dog/images/1187.jpg" alt="picture" />
+        <img src="picture.jpg" />
       </div>
       <div class="header_text">
-        <h1>
-          Домашние задание: сверстать трехколоночный макет, с использованием
-          симантической разметки
-        </h1>
+        <ul>
+          <li class="header"></li>
+          <li class="header"></li>
+          <li class="header"></li>
+          <li class="header"></li>
+        </ul>
       </div>
     </header>
 
     <section class="content">
       <section class="some_section">
         <div class="some_section_card">
-          <h2>Заголовок карточки</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad dolorum
-            tempore incidunt architecto veniam aspernatur, quibusdam quis?
-            Laudantium nobis repudiandae libero fugiat facere provident
-            consequuntur quidem earum blanditiis delectus. Magni?
-          </p>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
         </div>
         <div class="some_section_card">
-          <h2>Заголовок карточки</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Necessitatibus, enim quae ut officiis voluptate quidem eaque ipsam
-            consequuntur at iusto ad aliquam, ab similique voluptatum ipsum
-            rerum exercitationem veritatis accusamus.
-          </p>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
         </div>
       </section>
 
       <main>
         <article class="article_main">
-          <h2>Заголовок карточки</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
-            tempore, similique non repudiandae labore vero, ipsam nam deserunt
-            accusantium dolorum corporis impedit, commodi obcaecati nobis quidem
-            nisi amet enim ab?
-          </p>
+          <ul>
+            <li class="header"></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
         </article>
         <article class="article_main">
-          <h2>Заголовок карточки</h2>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta
-            beatae tempora fugit iste eum, aperiam necessitatibus, dignissimos
-            ipsam ipsum magni est repudiandae atque, fuga excepturi soluta
-            exercitationem dolorum aliquid ab.
-          </p>
+          <ul>
+            <li class="header"></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
         </article>
         <article class="article_main">
-          <h2>Заголовок карточки</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Exercitationem, rem libero labore, tenetur error qui dolore tempore
-            expedita laudantium illo debitis non aut impedit voluptatum corrupti
-            quod, perferendis cum officiis?
-          </p>
+          <ul>
+            <li class="header"></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
         </article>
         <article class="article_main">
-          <h2>Заголовок карточки</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus,
-            voluptatibus! Ipsam quia velit minima rem provident doloremque, nam
-            eum alias, impedit nihil reprehenderit ullam obcaecati! Perspiciatis
-            veniam possimus suscipit vel?
-          </p>
+          <ul>
+            <li class="header"></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
         </article>
       </main>
 
       <aside class="some_aside">
         <div class="some_aside_card">
-          <h2>Заголовок карточки</h2>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam,
-            assumenda aut enim nemo quia impedit cum quisquam magni ullam
-            sapiente cupiditate eaque atque porro et explicabo minus.
-            Praesentium, recusandae vel. Maxime, ab obcaecati enim inventore
-            eligendi alias iusto aspernatur nulla, repellendus est quo. Sunt
-            placeat id consequuntur sequi ipsum dolores? Lorem ipsum dolor sit,
-            amet consectetur adipisicing elit. Quibusdam quaerat obcaecati rerum
-            cumque velit pariatur, voluptate minima iusto itaque ducimus dolore
-            voluptatum voluptates, voluptas, quo eos ipsum quos. Rerum, est.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Consequuntur, maiores similique ipsam animi voluptates perspiciatis
-            natus vitae expedita obcaecati assumenda, incidunt sunt tempore
-            nesciunt tenetur iure aperiam veniam quasi doloribus.
-          </p>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
         </div>
       </aside>
     </section>
 
     <footer>
       <article class="article_footer">
-        <h2>Заголовок карточки</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Est saepe
-          vel, animi ipsum molestias ea commodi explicabo repellat dolorum aut
-          deserunt quam quos adipisci a eum earum aspernatur atque repellendus!
-        </p>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
       </article>
       <article class="article_footer">
-        <h2>Заголовок карточки</h2>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad ipsam id,
-          nihil beatae quae tempora illo eaque odio dolores debitis ex aliquid
-          consectetur rerum tenetur similique dolore quo iusto voluptates.
-        </p>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
       </article>
       <article class="article_footer">
-        <h2>Заголовок карточки</h2>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita
-          fuga magnam dolore nemo excepturi vero! Perferendis omnis, cum modi
-          laudantium delectus, commodi consequuntur ratione ea, ipsum tempora
-          unde nemo repellat.
-        </p>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
       </article>
       <article class="article_footer">
-        <h2>Заголовок карточки</h2>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui nulla
-          sapiente ducimus corrupti, mollitia ab pariatur quo iste placeat
-          numquam facilis voluptas asperiores quibusdam repellendus maxime ea,
-          aspernatur at! Rem.
-        </p>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
       </article>
     </footer>
   </body>
